--- a/python_day2.ipynb
+++ b/python_day2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9c4ee3f0",
    "metadata": {},
    "outputs": [
@@ -19,19 +19,10 @@
       "True\n",
       "YES\n",
       "llo\n",
-      "d\n",
-      "HELLO WORLD\n"
+      "Hello Worl\n",
+      "HELLO WORLD\n",
+      "hello world\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function print(*args, sep=' ', end='\\n', file=None, flush=False)>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
