--- a/python_Day1.ipynb
+++ b/python_Day1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e7a5c14b",
    "metadata": {},
    "outputs": [
@@ -12,19 +12,24 @@
      "text": [
       "4375172328\n",
       "4375172360\n",
-      "4375172392\n"
+      "4375172392\n",
+      "4375172488\n",
+      "4375172488\n",
+      "4375172488\n",
+      "apple\n",
+      "banana\n",
+      "cherry\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable int object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mid\u001b[39m(z))\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m#One to Multiple\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m x,y,z,\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m6\u001b[39m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mid\u001b[39m(x))\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mid\u001b[39m(y))\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable int object"
-     ]
+     "data": {
+      "text/plain": [
+       "\"global x # using keyword to declare globally\\ny='WOW' #declaring globally in the code \""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
