[Python work updated till 9/9/25

--- a/match_case.ipynb
+++ b/match_case.ipynb
@@ -19,14 +19,18 @@
     "match x: #it is same as swap case\n",
     "    case 0:\n",
     "        print(\"x is zero\")\n",
+    "        pass\n",
     "    case 4:\n",
     "        print(\"x is 4\")\n",
     "    case _ if x!=90:      \n",
     "        print(x,\"is not 90\")\n",
+    "        pass\n",
     "    case _ if x!=80:\n",
-    "        print(x,\"is not 80\")      \n",
+    "        print(x,\"is not 80\") \n",
+    "        pass     \n",
     "    case _:     #_ this underscore defines the default value\n",
-    "        print(x)\n"
+    "        print(x)\n",
+    "        pass\n"
    ]
   }
  ],
