--- a/pythonpractice.ipynb
+++ b/pythonpractice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "c2c0ebae",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,8 @@
       "True\n",
       "False\n",
       "True\n",
-      "True\n"
+      "True\n",
+      "dAKSH sINGHAL!!!!!!\n"
      ]
     }
    ],
@@ -86,7 +87,7 @@
     "print(a.isspace())\n",
     "print(a.istitle())#istitle return true when first letter of string is capital\n",
     "print(a.startswith(\"Daksh\"))\n",
-    "print(a.swapcase())\n",
+    "print(a.swapcase())#swapcase gives the string in opposite size characters\n",
     "\n",
     "\n",
     "\n",
