Function in oython updated on 12/9/25

--- a/break_and_continue.ipynb
+++ b/break_and_continue.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "f55f76e4",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skip the iteration\n"
+      "5 x 1 = 5\n",
+      "5 x 2 = 10\n",
+      "5 x 3 = 15\n",
+      "5 x 4 = 20\n",
+      "5 x 5 = 25\n",
+      "5 x 6 = 30\n",
+      "5 x 7 = 35\n",
+      "5 x 8 = 40\n",
+      "5 x 9 = 45\n",
+      "5 x 10 = 50\n",
+      "Skip the iteration\n",
+      "5 x 11 = 55\n",
+      "5 x 12 = 60\n"
      ]
     }
    ],
@@ -58,7 +70,7 @@
     "\n",
     "        print(\"5 x\",i+1,\"=\",5*(i+1))\n",
     "        if(i==9):\n",
-    "              print(\"Skip the iteration\")\n",
+    "              print(\"Skip the iteration\") #continue help to skip the next iteration\n",
     "              continue\n",
     "\n"
    ]
