--- a/loop.ipynb
+++ b/loop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "44a3af97",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1a1b9e59",
    "metadata": {},
    "outputs": [
@@ -40,11 +40,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "4\n",
-      "3\n",
       "2\n",
-      "1\n"
+      "5\n",
+      "Done with the loop\n"
      ]
     }
    ],
@@ -66,9 +64,9 @@
     "\n",
     "\n",
     "#do while loop used in c language\n",
-    "do{\n",
-    "    #loop body.   #One condition will alwys run irrespective of the condition is true or not then after that will look about the while loop\n",
-    "}while(condition):\n",
+    "# do{\n",
+    "#     #loop body.   #One condition will alwys run irrespective of the condition is true or not then after that will look about the while loop\n",
+    "# }while(condition):\n",
     "\n",
     "\n",
     "\n"
